<resources>
    <string name="app_name">Alley Craps</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="username_h">Username</string>
    <string name="password_h">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="create_acc">New Account</string>
    <string name="email">E-Mail: </string>
    <string name="sign_up">Sign Up</string>
    <string name="send_pwd">Send Password</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="play_now">Play Now</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="credits">Credits</string>
    <string name="how_to_play">How to Play</string>
    <string name="two_dice">Two Dice</string>
    <string name="three_dice">Three Dice</string>
    <string name="balance">Balance: </string>
    <string name="bet">Bet: </string>
    <string name="place_bet">Place Bet</string>
    <string name="leave_game">Leave Game</string>
    <string name="result">Result</string>
    <string name="game_over">Game Over!</string>
    <string name="reset">Reset</string>
    <string name="win">Win!</string>
    <string name="loss">Lost!</string>
    <string name="set_name">Set Username</string>
    <string name="settings">Settings</string>
    <string name="instructions">Roll the dice \n\n If the first result is a 7 or 11, you win. \n\n If the first result is a 2, 3 or 12, you loose. \n\n Any other roll becomes the point. \n\n\n Roll the point again to win, and 7 to loose</string>
    <string name="holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pellentesque dui nisi, eget rhoncus lacus consequat sed. Vestibulum dictum dignissim mi pharetra vestibulum. Integer accumsan ultricies consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam nulla justo, pharetra ut neque eget, congue rutrum magna. Maecenas eget tortor non enim posuere vestibulum. Morbi ipsum velit, pretium ac libero vel, eleifend volutpat massa. Sed et condimentum ipsum, eu viverra nisl. Fusce ullamcorper ullamcorper nibh at bibendum. Integer massa arcu, dapibus a velit eget, sollicitudin rhoncus elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam arcu metus, fringilla at consequat at, rutrum at leo. Pellentesque ut pretium nibh. Nullam sit amet sem eleifend, molestie leo venenatis, egestas est. Nam tempor lobortis odio, at mollis quam faucibus vitae.

Nunc eget dolor tellus. Nam vel rutrum ipsum. Sed ultrices est risus, a egestas tortor lacinia a. Sed rutrum, enim vel bibendum aliquam, nunc magna mattis lectus, nec volutpat purus libero at enim. Cras a feugiat ipsum. Pellentesque sit amet felis sem. Phasellus metus velit, vehicula cursus sollicitudin eu, imperdiet lobortis velit. Quisque ac ipsum dolor.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi metus dui, blandit ac ligula eget, sodales rutrum ipsum. Nulla eu velit tempor erat ullamcorper volutpat ut nec nisi. Duis porta tincidunt diam, quis ultricies ipsum pretium sed. Nam viverra ligula diam, id iaculis nisi congue sed. Praesent ultricies ullamcorper tortor at tempor. Ut faucibus pellentesque lacus, ultrices pretium mauris ultrices ut. Vestibulum pellentesque nisl dolor, vel placerat urna ullamcorper auctor.

Nulla condimentum congue lectus, quis lobortis lorem porttitor ut. Mauris tincidunt, tellus vitae cursus lobortis, neque odio pulvinar orci, sit amet auctor nisl ligula nec purus. Suspendisse vehicula, quam vel consequat feugiat, elit arcu sagittis tortor, pellentesque luctus libero augue a ipsum. Aliquam vitae ullamcorper nunc. Sed laoreet neque eu est dignissim, vitae venenatis risus tristique. Cras erat dui, laoreet ut diam ut, finibus egestas turpis. Vestibulum augue libero, semper vel diam sit amet, convallis aliquam nulla. Sed sollicitudin nunc ut dictum feugiat. Nunc a odio quis lectus egestas convallis eu et lectus. Cras vel est a quam pulvinar ornare. Cras blandit fermentum tellus vitae euismod. Donec vitae magna lorem. Vivamus quis massa eget enim finibus ornare.

Nam aliquet mi id gravida tempus. Etiam nec lacinia ex, eget luctus dui. Cras id mollis odio, eu rhoncus quam. Cras et rhoncus massa. Nullam malesuada ex at orci scelerisque, at auctor mi tempor. Fusce elementum viverra mauris, quis congue neque elementum quis. Donec aliquam libero quam, vel vulputate velit pulvinar ut. Nam vitae orci eget diam rhoncus viverra. Cras scelerisque dolor nunc, eget laoreet urna pulvinar a. Vivamus ornare dapibus sapien quis aliquet. Nulla sit amet urna nec tortor dictum semper non nec magna. Vestibulum nec interdum risus. Integer egestas malesuada neque quis varius. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus at eleifend diam, quis euismod diam.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
