<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".gui.SettingsFragment"
    android:background="@color/grey">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/set_username_btn_settings"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/set_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_btn_settings"/>


    <Button
        android:id="@+id/reset_btn_settings"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/set_username_btn_settings"
        app:layout_constraintBottom_toTopOf="@id/back_btn_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/back_btn_settings"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/reset_btn_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>