<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/grey"
    tools:context=".gui.InstructionFragment"
    android:id="@+id/instruction_fragment">

    <TextView
        android:id="@+id/title_inst"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollview_inst"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/back_btn_inst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_inst">

        <TextView
            android:id="@+id/inst_inst"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/back_btn_inst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_inst" />

    </ScrollView>

    <Button
        android:id="@+id/back_btn_inst"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview_inst"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>